--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "license": "ISC",
     "dependencies": {
         "@tonappchain/sdk": "^0.5.7",
+        "dotenv": "^16.5.0",
         "ethers": "^6.14.0"
     },
     "devDependencies": {
+        "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
     }
 }
